update sequential consumer

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "produce": "node producer.js",
     "consume": "node consumer.mjs",
+    "consume-sequential": "node sequential-consumer.mjs",
     "init": "environment/init"
   },
   "dependencies": {
